--- a/static/css/style_index.css
+++ b/static/css/style_index.css
@@ -1,7 +1,7 @@
 @charset 'utf8';
 
 *{
-    background-color: aqua;
+    background-color: #1b1f27;
     color: white;
     font-family: arial, helvetica, sans-serif;
     margin: 0px;
@@ -9,22 +9,57 @@
 }
 
 
+.container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 20vh;
+}
+
+
 .section_form{
     text-align: center;
-    background-color: red;
-    padding: 10px;
-    margin-top: 40vh;
+    border-radius: 40px;
+}
+
+
+.p_img{
+    border-top-right-radius: 40px;
+    border-top-left-radius: 40px;
+    padding-top: 40px;
+}
+
+
+.input_user{
+    margin-left: 10px;
+}
+
+
+img{
+    background-color: black;
+    max-width: 120px;
 }
 
 
 form{
     background-color: black;
+    border-bottom-right-radius: 40px;
+    border-bottom-left-radius: 40px;
+    padding-bottom: 40px;
+    padding-right: 40px;
+    padding-left: 40px;
 }
 
 
 p{
     background-color: black;
     padding: 10px;
+}
+
+
+.p_senha{
+    border-bottom-left-radius: 40px;
+    border-bottom-right-radius: 40px;
 }
 
 
@@ -35,4 +70,8 @@ label{
 
 input{
     background-color: black;
+    border-radius: 6px;
+    background-color: white;
+    color: black;
+    padding: 4px;
 }
