--- a/templates/index.html
+++ b/templates/index.html
@@ -18,11 +18,11 @@
         <form action="{{ url_for('index') }}" method="get">
             <p>
                 <label for="id_user"> user: </label>
-                <input autofocus id="id_user" class="input_user">
+                <input type="text" autofocus id="id_user" class="input_user">
             </p>
             <p class="p_senha">
                 <label for="id_senha"> senha: </label>
-                <input id="id_senha">
+                <input type="password" id="id_senha">
             </p>
             <p class="p_input">
                 <input type="submit" value="log in">
