--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,5 @@
 <html>
-<head>
+<head lang="pt-br">
     <meta charset="UTF-8">
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
