--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,7 @@
         <p class="p_img">
             <img src="../static/images/usuario2.png" title="usuario" >
         </p>
-        <form action="{{ url_for('index') }}" method="get">
+        <form action="{{ url_for('add_user') }}" method="post">
             <p>
                 <label for="id_user"> user: </label>
                 <input type="text" autofocus id="id_user" class="input_user">
