--- a/templates/user_deleted.html
+++ b/templates/user_deleted.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <title>user_deleted</title>
@@ -7,6 +7,8 @@
 <body>
 
 <h1>user deleted successfully</h1>
+
+<a href="{{ url_for('index') }}" target="_self">back to login page</a>
 
 </body>
 </html>
