--- a/templates/404.html
+++ b/templates/404.html
@@ -8,5 +8,11 @@
 
 <h1>this is a 404 page</h1>
 
+<br>
+<br>
+
+<img src="../static/images/404.png" alt="404 error" title="404 error">
+
+
 </body>
 </html>
