--- a/templates/index.html
+++ b/templates/index.html
@@ -26,7 +26,7 @@
                 <input type="password" maxlength="240" required name="name_senha" id="id_senha">
             </p>
             <p class="p_input">
-                <input type="submit" value="log in">
+                <input type="submit" value="cadastrar">
             </p>
         </form>
     </section>
