--- a/templates/index.html
+++ b/templates/index.html
@@ -26,7 +26,8 @@
                 <input type="password" maxlength="240" required name="name_senha" id="id_senha">
             </p>
             <p class="p_input">
-                <input type="submit" value="cadastrar">
+                <input type="submit" value="cadastrar" name="name_cadastra">
+                <input type="submit" value="login" name="name_login">
             </p>
         </form>
     </section>
