--- a/templates/index.html
+++ b/templates/index.html
@@ -18,7 +18,7 @@
         <form action="{{ url_for('add_user') }}" method="post" name="name_form" id="id_form">
             <p>
                 <label for="id_user"> user: </label>
-                <input type="text" onpaste="return false" autocomplete="on" maxlength="40" placeholder="max - 40" autofocus required
+                <input type="email" onpaste="return false" autocomplete="on" maxlength="40" placeholder="max - 40" autofocus required
                        name="name_user" id="id_user" class="input_user">
             </p>
             <p class="p_senha">
