--- a/templates/404.html
+++ b/templates/404.html
@@ -13,6 +13,16 @@
 
 <img src="../static/images/404.png" alt="404 error" title="404 error">
 
+<br>
+<br>
+
+<h2>maybe ut looking for other page</h2>
+<h2>these right down r our pages</h2>
+
+<br>
+<br>
+
+<a href="{{ url_for('index') }}" target="_self">index</a>
 
 </body>
 </html>
