--- a/templates/404.html
+++ b/templates/404.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <title>404</title>
@@ -16,7 +16,7 @@
 <br>
 <br>
 
-<h2>maybe ut looking for other page</h2>
+<h2>maybe u r looking for other page</h2>
 <h2>these right down r our pages</h2>
 
 <br>
