--- a/templates/500.html
+++ b/templates/500.html
@@ -8,5 +8,15 @@
 
 <h1>this is just a 500 error page</h1>
 
+<br>
+<br>
+
+<img src="../static/images/500.png" alt="500 error" title="500 error">
+
+<br>
+<br>
+
+<a href="{{ url_for('index') }}" target="_self">return to index</a>
+
 </body>
 </html>
