--- a/templates/index.html
+++ b/templates/index.html
@@ -17,9 +17,9 @@
         </p>
         <form action="{{ url_for('add_user') }}" method="post" name="name_form" id="id_form">
             <p>
-                <label for="id_user"> user: </label>
+                <label for="id_email"> email: </label>
                 <input type="email" onpaste="return false" autocomplete="on" maxlength="40" placeholder="max - 40" autofocus required
-                       name="name_user" id="id_user" class="input_user">
+                       name="name_email" id="id_email" class="input_email">
             </p>
             <p class="p_senha">
                 <label for="id_senha"> senha: </label>
