--- a/templates/delete.html
+++ b/templates/delete.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-<h1>do u really wanna delete user --> <br> <br> {{id}} - {{user}}</h1>
+<h1>do u really wanna delete user --> <br> <br> {{id}} - {{email}}</h1>
 
 <form method="post" action="{{ url_for('delete_user') }}">
     <input type="submit" value="yes">
